# Game-Parlor

./: CMakeLists.txt  README.md
include/: gameGetters.h  gameProcessing.h
src/: gameGetters.c  gameProcessing.c  main.c
